# max_rects

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md
src/: bucket.rs  lib.rs  main.rs  max_rects.rs  packing_box.rs  visualizer.rs
