[package]
name = "max_rects"
version = "1.0.1"
edition = "2021"
authors = ["Jeremy Gray <jeremycgray@gmail.com>"]
repository = "https://github.com/jeremycg/max_rects/"
license = "MIT"
description = "An implementation of the maximal rectangles algorithm for 2d bin packing."

[lib]
path = "src/lib.rs"

[[bin]]
name = "max_rects"
path = "src/bin/main.rs"

[dependencies]
rayon = "1.5.1"
image = "0.23"
imageproc = "0.22.0"
rand = "0.8"
clap = "3"